--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,5 @@
 	},
 
 	"typescript.preferences.importModuleSpecifier": "non-relative",
-	"typescript.preferences.autoImportSpecifierExcludeRegexes": ["^(node:)?os$"],
+	"typescript.preferences.autoImportSpecifierExcludeRegexes": ["^(node:)?os$"]
 }
